chores: modifying context

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "DittoBox-WebApp": {
+    "QualiFood-WebApp": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/ditto-box-web-app",
+            "outputPath": "dist/quali-food-web-app",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
@@ -63,10 +63,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "DittoBox-WebApp:build:production"
+              "buildTarget": "QualiFood-WebApp:build:production"
             },
             "development": {
-              "buildTarget": "DittoBox-WebApp:build:development"
+              "buildTarget": "QualiFood-WebApp:build:development"
             }
           },
           "defaultConfiguration": "development"
